--- a/Detector/Detector.tex
+++ b/Detector/Detector.tex
@@ -6,7 +6,7 @@
 
 The \acf{LHC} \cite{lhc-machine}  is a 26.7 km long synchrotron hadron accelerator and collider below the surface of the 
 Franco-Swiss border near Geneva. It
-is installed in the tunnel that previously hosted the Large Electron Positron accelerator
+is installed in the tunnel that previously hosted the Large Electron Positron accelerator \cite{lep-design}
 that was operated by \acf{CERN} between 1989 and 2000.
 
 The \ac{LHC} was designed to collide beams of protons with each other at centre-of-mass
@@ -14,11 +14,11 @@ energies of up to 14 TeV. It therefore consists of two rings in which the two be
 of protons are individually accelerated. In addition to colliding beams of protons, the \ac{LHC}
 is also used for proton--lead and lead--lead collisions.
 \begin{figure}[h!]
-\includegraphics[width=0.6\textwidth]{./Detector/Plots/LHC_default.jpg}
+\includegraphics[width=\textwidth]{./Detector/Plots/LHC_default.jpg}
 \caption{Schematic of the \ac{CERN} accelerator complex \cite{lhc-schematic}.}
 \label{fig:lhc_schematic}
 \end{figure}
-The \ac{LHC} does not operate on its own: the protons are lead into
+The \ac{LHC} does not operate on its own: the protons are fed into
 it via a chain of accelerators. Figure \ref{fig:lhc_schematic} shows a schematic
 of the \ac{CERN} accelerator complex.
 
@@ -31,7 +31,7 @@ are created from the hydrogen gas, they are accelerated to an energy of
 The next accelerator in the chain, the \acf{PS}, further accelerates the protons to 25 GeV,
 with the \acf{SPS} bringing the energy up to 450 GeV. When this energy has been 
 reached the protons are injected into the \ac{LHC} in two counter-rotating
-beams. In the \ac{LHC} ring the beams are further accelerated to the required centre of mass energy
+beams. In the \ac{LHC} ring the beams are further accelerated to the required centre-of-mass energy
 by eight \ac{RF} cavities. At design operation the beams consist of 2808 proton bunches each made up 
 of $\mathcal{O}(10^{11})$ protons, spaced 25ns apart. The beams are kept in circulation
 using 1232 niobium-titanium superconducting dipole magnets, cooled to operate at 
@@ -44,14 +44,6 @@ The processes the \ac{LHC} was built to study have a small cross-section
 compared with the total proton-proton inelastic cross-section, as seen from figure
 \ref{fig:stirling_xs}. For example, the production cross-section of the
 standard model Higgs boson is 9-10 orders of magnitude smaller than the total p--p cross section.
-\begin{figure}[h!]
-\includegraphics[width=0.5\textwidth]{./Detector/Plots/crosssections2013.jpg}
-\caption{Total proton-proton cross section, and the cross-sections
-for several processes studied at the LHC \cite{stirling-crosssection}.
-The cross sections of these processes
-are often many orders of magnitude smaller than the total p--p cross section.}
-\label{fig:stirling_xs}
-\end{figure}
 In order to be able to study these relatively rare processes, 
 the LHC operates at high instantaneous luminosity, defined as
 \begin{equation}\label{eqn:CMSLHC_luminosity}
@@ -63,26 +55,31 @@ Lorentz factor, $\epsilon_n$ the normalised beam
 emittance, $\beta^{*}$ the $\beta$-function at the interaction point and F a reduction
 factor due to the crossing angle. 
 
-The \ac{LHC} began its first physics run in May 2010, colliding protons at
-a centre-of-mass energy of 7 TeV. The \ac{CMS} experiment recorded an integrated luminosity of 45 pb$^{-1}$
-during the rest of that year. In 2011 the \ac{LHC} continued operating at a centre-of-mass energy of 7 TeV, delivering
-6.1 fb$^{-1}$ to the \ac{CMS} experiment. The centre-of-mass energy was increased to 8 TeV
-for the 2012 data-taking period, during which the delivered integrated luminosity was 23.3 fb$^{-1}$.
-This completed Run 1 of the \ac{LHC}, after which the 2-year \ac{LS1} was used to 
-upgrade the \ac{LHC} and the detectors for collisions at a centre-of-mass energy of 13-14 TeV.
+\begin{figure}[h!]
+\includegraphics[width=0.5\textwidth]{./Detector/Plots/crosssections2013.jpg}
+\caption{Total proton-proton cross section, and the cross-sections
+for several processes studied at the LHC \cite{stirling-crosssection}.
+The cross sections of these processes
+are often many orders of magnitude smaller than the total p--p cross section.}
+\label{fig:stirling_xs}
+\end{figure}
 
-In April 2015 the \ac{LHC} restarted with collisions at a centre-of-mass energy of 13 TeV, and during 
-this year 4.2 fb$^{-1}$ was delivered to \ac{CMS}. The \ac{LHC} operated at a centre-of-mass energy of 13 TeV 
-during 2016 too, when a total of 41.1 fb$^{-1}$ was delivered to \ac{CMS}.
-The integrated luminosity as a function of time is shown in figure \ref{fig:CMSLHC_intlumi},
-separated by running year.
+
+The \ac{LHC} began its first physics run in May 2010, colliding protons at
+a centre-of-mass energy of 7 TeV, and continued operation until the end of 2012. After this the 
+2-year \ac{LS1} was used to upgrade the \ac{LHC} and the detectors for collisions at a centre-of-mass
+energy of 13-14 TeV. In April 2015 the \ac{LHC} restarted with collisions at a centre-of-mass energy of
+13 TeV. The integrated luminosity delivered to the \ac{CMS} experiment, separated by running year, is shown in
+figure \ref{fig:CMSLHC_intlumi}.
+
 \begin{figure}[h!]
 \includegraphics[width=0.85\textwidth]{./Detector/Plots/int_lumi_cumulative_pp_2.pdf}
 \caption{Cumulative integrated luminosity delivered to \ac{CMS} for p--p collisions at the \ac{LHC}, separated
 by running year \cite{cms-lumi-public}.}
 \label{fig:CMSLHC_intlumi}
 \end{figure}
-The data-taking efficiency of CMS is not 100\%, for example the detector might be
+
+The data-taking efficiency of CMS is not 100\%, for example part of the detector might be
 switched off for part of the time collisions are ongoing. In 2012, the data-taking 
 efficiency was 93.5\%, in 2015 it was 90.3\% and in 2016 it was 92.4 \%
 
@@ -90,7 +87,8 @@ From all of the data that is recorded, only a subset is used for analysis. Data 
 certified as good for use in analyses if it is known that all relevant subdetectors
 were functioning correctly. In 2012 the certification efficiency was 90.4\%,
 meaning all subdetectors were working well for a dataset corresponding to 19.7 fb$^{-1}$.
-The certification efficiency was 60.4 \% in 2015, leading to 2.3 fb${-1}$ of 
+Due to cryogenic issues the certification efficiency with the magnet operating
+at 3.8 Tesla was 60.4 \% in 2015, leading to 2.3 fb$^{-1}$ of 
 analysable data for which the full detector was operational. An additional 0.6 fb$^{-1}$
 was taken with the \ac{CMS} magnet switched off. For the full 2016 p--p running period
 the certification efficiency was 95.4\%, resulting in 36.26 fb$^{-1}$ of data marked good
@@ -98,25 +96,25 @@ for use in analyses.
 
 The \ac{LHC} was designed for proton-proton collisions with a nominal
 peak luminosity of $10^{32}$cm$^{-2}$s$^{-1}$. In 2012 peak
-luminosities of $7.7*10^{33}$cm$^{-2}$s$^{-1}$ were reached, with the peak luminosity in
-2015 being $5.1*10^{33}$cm$^{-2}$s$^{-1}$. Since July 2016
+luminosities of $7.7\cdot10^{33}$cm$^{-2}$s$^{-1}$ were reached, with the peak luminosity in
+2015 being $5.1\cdot10^{33}$cm$^{-2}$s$^{-1}$. Since July 2016
 the \ac{LHC} has been operating at instantaneous luminosities upwards of the 
-design luminosity, with peak luminosities of $1.5*10^{32}$cm$^{-2}$s$^{-1}$ reached
+design luminosity, with peak luminosities of $1.5\cdot10^{32}$cm$^{-2}$s$^{-1}$ reached
 in October 2016 \cite{cms-lumi-public}.
 
 Due to the high operating luminosity, multiple proton-proton collisions per 
-bunch crossing are likely to occur. The average number of interactions
+bunch crossing are likely to occur. Additional interactions on top of events of 
+interest are referred to as pile-up. The average number of interactions
 per bunch crossing was 21 in 2012\cite{cms-lumi-public}. The average number of
 interactions per bunch crossing was lower than this at the start of Run 2, with
 an average of 14 interactions per bunch crossing for the data collected
 during 2015 \cite{CMS-PAS-HIG-16-006}. In the data-taking period up to August 2016 the average number of interactions
-per bunch crossing increased to 24 \cite{CMS-PAS-HIG-16-037}. Additional 
-interactions on top of events of interest are referred to as pile-up.
+per bunch crossing increased to 24 \cite{CMS-PAS-HIG-16-037}.
 
 \section{The \acs{CMS} detector}
 \label{sec:CMSLHC_CMS}
 To meet the demands of the \ac{LHC} physics programme, the
- \ac{CMS} detector was designed to be very perfomant in searches
+ \ac{CMS} detector was designed to perform very well in searches
 for physics at the TeV scale and to be able to 
 function in the challenging high-luminosity environment.
 The detector is 21.6 m long, 14.6 m in diameter, and weighs
@@ -129,13 +127,13 @@ different sub-parts of the detector.}
 \label{fig:cms_detector}
 \end{figure}
 
-The silicon tracker, a cylinder 5.8 m in length and 2.6 m in
+The silicon tracker, a cylinder \mbox{5.8 m} in length and \mbox{2.6} m in
 diameter, surrounds the interaction point. The tracker is 
 surrounded by the lead-tungstate \ac{ECAL}, which is enclosed
 by the brass scintillator \ac{HCAL}.
 
 The tracking and calorimeter systems are surrounded by a superconducting
-solenoid, 13 m long, 6 m in diameter and operating at 3.8 Tesla.
+solenoid, \mbox{13 m} long, \mbox{6 m} in diameter and operating at 3.8 Tesla.
 Charged particles are bent in this magnetic field, allowing for precise 
 measurement of their momentum. Gaseous muon detectors are embedded in the 
 iron return yoke of the solenoid.
@@ -145,7 +143,7 @@ system with the origin centred at the nominal collision point
 inside the experiment. The y-axis points vertically upward, the x-axis
 points radially inward toward the centre of the \ac{LHC} ring. The z-axis
 points along the beam direction. As such the transverse momentum and energy, 
-\pT~and~\ET are measured from the x- and y- components of the momentum and energy.
+\pT~and \ET~are measured from the x- and y- components of the momentum and energy.
 The azimuthal angle $\phi$ is measured in the x-y plane with respect to the x-axis, 
 the polar angle $\theta$ measured with respect to the z-axis. A coordinate
 more frequently used than the polar angle is the pseudorapidity $\eta = -\ln{[\tan{\frac{\theta}{2}}]}$.
@@ -158,15 +156,15 @@ next sections.
 \label{sec:CMSLHC_CMS_tracker}
 The tracker \cite{cms-jinst} is the subdetector closest to the interaction point. It
 is used for accurate reconstruction of charged particle trajectories and 
-the precise reconstruction of secondary vertices, which are important to be
-able to indentify heavy-flavour particles. This means a small impact parameter
+the precise reconstruction of primary and secondary vertices, the latter being important for
+the identification of heavy-flavour particles. This means a small impact parameter
 resolution needs to be achieved, for which a highly granular system is required. 
 Due to the large number of particles emerging from 
 each collision, an average of 1000 per bunch crossing (every 25 ns) at LHC design operation, the 
-system also needs to be fast-responding in order to reconstruct trajectories accurately.
+system also needs to be able to respond quickly in order to reconstruct trajectories accurately.
 At the same time, this large particle flux calls for a 
 radiation-hard design that is able to survive in this harsh environment
-for a longer period of time. These requirements motivate the use of a silicon tracking
+for a long period of time. These requirements motivate the use of a silicon tracking
 system. 
 
 In a silicon tracking system, the positions of particles are recorded
@@ -178,10 +176,10 @@ that can be read out. %LEARN A BIT MORE ABOUT THIS
 The tracker, providing coverage up to $|\eta|<2.5$, consists of 
 several different components. A schematic of the tracking detector, indicating
 the locations of these components, is given in figure \ref{fig:CMS_tracker}.
-Nearest the interaction point the tracker is a pixel detector made
+Nearest the interaction point is the pixel detector, made
 of 66 million silicon pixels, each 100 $\mu$m $\times$ 150 $\mu$m in size.
-The choice of this pixel size is driven by the achievable spatial resolution,
-which is 15-20 $\mu$m in the $r$ and $z$ directions in this case. Such a
+The choice of this pixel size is driven by the ability to achieve the desired spatial resolution,
+which is 15-20 $\mu$m in the $r-\phi$ and $z$ directions in this case. Such a
 precise resolution allows for 3D vertex reconstruction. The pixel
 detector consists of 3 layers of pixels in the barrel region, with 2 pixel disks 
 placed in the endcap region at either side. The barrel layers sit at radii of
@@ -212,13 +210,13 @@ The \ac{TIB} and \ac{TID} are surrounded by the \ac{TOB}, which consists of six 
 up to an outer radius of 116 cm and up to $z=\pm 118$ cm. The strips in the \ac{TOB} are 500~$\mu$m thick, around 25 cm long and 122-183 $\mu$m 
 wide and this subdetector provides 6 measurements of $r$ and $\phi$, with a resolution
 of 35-53 $\mu$m. Beyond the z-range covered by the \ac{TOB}, coverage is provided by the \ac{TEC},
-consisting of nine disks of strips. In the \ac{TEC}, the strip thickness ranges from 320-500 $\mu$m and the the strip width ranges from $97-184 \mu$m.
+consisting of nine disks of strips. In the \ac{TEC}, the strip thickness ranges from \mbox{320-500 $\mu$m} and the the strip width ranges from $97-184 \mu$m.
 This part of the system provides up to nine $\phi$ measurements.
 
 Some of the strip modules in the detector carry a second strip detector module mounted back-to-back with a stereo angle %FIXME WTF?
 of 100 mrad, in order to provide measurements of the $z-$ coordinate in the barrel. This is achieved with a resolution of 230-530 $\mu$m.
 
-The pixel tracker will be upgraded during the extended year-end technical stop in early 2017. This upgrade is needed to
+The pixel tracker will be upgraded during the extended year-end technical stop in late 2016-early 2017. This upgrade is needed to
 maintain the performance of the tracker as the pile-up increases over the next few years \cite{cms-pixel-upgrade}. %or just replaced?
 
 
@@ -226,7 +224,7 @@ maintain the performance of the tracker as the pile-up increases over the next f
 \label{sec:CMSLHC_CMS_ecal}
 The \ac{ECAL} \cite{cms-jinst} is a hermetic homogeneous calorimeter
 made of nearly 76000 lead tungstate (PbWO$_4$) crystals. It has very
-good energy resolution, is highly granular and fast-responding, all qualities 
+good energy resolution, is highly granular and has a fast response, all qualities 
 which are needed to be able to detect $H\rightarrow \gamma\gamma$ decays.
 
 The choice of lead tungstate crystals is motivated by the
@@ -234,8 +232,8 @@ radiation-hardness of the material in combination with its
 short radiation length, small Moli\`ere radius and short scintillation
 decay time. With a radiation length of 0.89 cm and a Moli\`ere radius of 2.2 cm,
 lead tungstate crystals allow for the construction of a compact, highly 
-granular \ac{ECAL}. The compactness of the \ac{ECAL} is required in 
-order to be able to fit the calorimeters inside the bore of the magnet. 
+granular \ac{ECAL}. The compactness of the \ac{ECAL} is required  
+to fit inside the bore of the magnet. 
 As 80\% of the light from the crystals is emitted within 25 ns, that is
 within the time between two bunch crossings at design operation of the \ac{LHC},
 the lead tungstate crystals satisfy the requirements imposed by the \ac{LHC} operating
@@ -254,9 +252,11 @@ shower producing a cascade of lower energy particles. Electrons lose
 energy through bremsstrahlung, with photons undergoing $\Pe^+ \Pe^-$ 
 pair production. The shower continues until the photon energy drops below the 
 $\Pe^+\Pe^-$ pair production threshold, and ionisation 
-starts to dominate for electrons. The shower ionises the atoms in the lead-tungstate
+starts to dominate for electrons. The shower ionises [IS THIS WHAT HAPPENS?] the atoms in the lead-tungstate
 crystals, which then emit scintillation light that is converted to a current by the 
-photodetectors. 
+photodetectors. To record the light of the crystals, amplifying photodetectors need
+to be used, with avalanche photodiodes used in the barrel region, and vacuum phototriodes employed
+in the endcaps.
 As the crystals are 25.8 radiation lengths long, most of the shower
 is contained inside them.
 
@@ -264,10 +264,11 @@ Figure \ref{fig:CMS_ECAL} shows a schematic of the \ac{ECAL}, indicating
 the subsystems it is made up of. The \ac{EB} 
 covers the pseudorapidity range up to $|\eta|<1.479$, with
 crystals of $0.0174 \times 0.0174$ in $\eta - \phi$. The \ac{EE}
-provide coverage beyond the range of the \ac{EB}, up to $|\eta|<3.0$
+provide coverage beyond the range of the \ac{EB}, up to $|\eta|<3.0$.
 Each endcap is divided into two halves. In front of the endcaps 
 the preshower detectors, covering $1.653<|\eta|<2.6$ are sampling
-calorimeters whose main use is to indentify neutral pions in the endcaps. Additionally
+calorimeters whose main use is to identify neutral pions, decaying to two photons, 
+in the endcaps. Additionally
 the preshower detectors aid the identification of electrons and improve the resolution
 of position determination. Each of the two preshower detectors consist
 of two layers of lead radiators to initiate the shower, with silicon sensors
@@ -283,16 +284,13 @@ different components \cite{cms-jinst}.}
 \end{center}
 \end{figure}
 
-To preserve the energy resolution, the \ac{ECAL} crystal and
-photodetector temperatures need to be kept stable within $\pm 0.05^{\circ}$C
+To preserve the energy resolution, the crystals and
+photodetectors need to be kept stable within $\pm 0.05^{\circ}$C
 as the number of scintillation photons emitted by the crystals,
 and the amplification of the photodetectors, are temperature dependent.
 The nominal operating temperature, $18^{\circ}$C, is ensured by 
 supplying the detector with water at this temperature.
 
-To record the light yield of the crystals, amplifying photodetectors
-need to be used. In the \ac{EB} avalance photodiodes are employed
-for this, with vacuum phototriodes used in the \ac{EE}.
 
 The energy resolution of the \ac{ECAL} can be parameterised as
 \begin{equation}\label{eqn:ecalres}
@@ -300,7 +298,7 @@ The energy resolution of the \ac{ECAL} can be parameterised as
 \end{equation}
 where $S$ is the stochastic term, $N$ the noise term and $C$ the constant term.
 The stochastic term arises from fluctuations in lateral shower containment and 
-fluctuations in scintillation, the noise term due to noise from the electronics
+fluctuations in the scintillation yield, the noise term due to noise from the electronics
 and additional particles in the event, and the constant term comes
 from calibration errors and the non-uniformity of the longitudinal response.
 
@@ -314,7 +312,7 @@ $S = 0.028$ GeV$^{\frac{1}{2}}$, $N = 0.12$ GeV and $C= 0.003$.
 \subsection{\acl{HCAL}}
 \label{sec:CMSLHC_CMS_hcal}
 The \ac{ECAL} is surrounded by the \ac{HCAL} \cite{cms-jinst}, which is needed for the
-measurement of the energies of strongly interacting particles. As
+measurement of the energies of strongly interacting particles and \MET. As
 the \ac{ECAL} extends out to a radius of 1.77 m and the magnet coil
 starts at a radius of 2.95 m, space for the \ac{HCAL} inside the magnet
 coil is limited. The \ac{HCAL} design takes
@@ -343,7 +341,7 @@ beyond this range. The light from each tile is collected with a wavelength-shift
 which is read out using hybrid photodiodes. 
 
 In the barrel, the \ac{HCAL}
-has a thickness of between 5.82 and 10.6 interaction length, which is not 
+has a thickness of between 5.82 and 10.6 interaction lengths, which is not 
 sufficient to identify for example late-starting showers. The \ac{HO}, sitting
 outside of the magnet and using the coil as an additional absorber, extends the 
 thickness to at least 11.8 interaction lengths. 
@@ -355,8 +353,8 @@ to a hybrid photodiode via wavelength-shifting fibres.
 The \ac{HF}, providing coverage in the very forward region, is 
 subjected to large radiation doses, requiring an extremely
 radiation-hard active material. For this reason quartz
-fibres are used as active material. These fibres are embedded
-in the steel absorber structure. Charged particles from the
+fibres are used. These fibres are embedded
+in a steel absorber structure. Charged particles from the
 shower initiated in the steel generate Cherenkov light in 
 the quartz fibres, which is read out by photomultiplier tubes.
 %Half of the fibres run over the full depth of the absorber
@@ -385,9 +383,9 @@ Precise muon identification is one of the requirements of the \ac{CMS}
 experiment. Good muon identification efficiency and precise muon momentum 
 resolution are key to the success of the experiment, as muons are
 very important for the detection of $H\rightarrow ZZ \rightarrow 4\ell$ decays. In addition to that,
-muons appear in the final states of many \ac{BSM} signatures the experiment is used to search for.
+muons appear in the final states of many of the \ac{BSM} signatures the experiment is searching for.
 
-The \ac{CMS} muon system \cite{cms-jinst} is made up out of three different subsystems which
+The \ac{CMS} muon system \cite{cms-jinst} is designed of three different subsystems which
 are all necessary to ensure the identification requirements can be met. It is located
 outside of the magnet coil, interspersed in the iron return yoke of the solenoid.
 In the barrel of the detector the \ac{DT} chambers provide coverage for $|\eta|<1.2$, with
@@ -410,20 +408,20 @@ part existed.}
 \end{figure}
 The \ac{DT} consists of layers of drift cells which have a cross-section of $4.2 \times 1.3$ cm$^2$ and
 are 2.4 m long. The cells are filled with a mixture of %85\% 
-argon and carbon di-oxide gas.
+argon and carbon dioxide gas.
 Muons passing through the chamber ionise the gas, freeing electrons
 which drift towards the anode wire running along the centre of the tube-shaped cell. 
 This gives rise to an electric signal. There are 4 \ac{DT} stations in each wedge of 
 the detector, each in turn consisting of 8 to 12 layers of drift tubes. Some of
 these layers are oriented parallel to the beam line, providing a measurement of $\phi$.
 There are also layers oriented orthogonal to the beam line, which give a measurement
-of the z-coordinate. Measurements of the spatial resolution were made
+of the z coordinate. Measurements of the spatial resolution were made
 during proton--proton running of the \ac{LHC} in 2010.
 The spatial resolution of the \ac{DT} is 80-120 $\mu$m per chamber for
 measurements in the $\phi$ direction, while the resolution of the $z$ measurement
 is 130-400 $\mu$m\cite{cms-muon-7tev}. %Drift lines distorted by magnetic field parallel to the wires
 
-In the endcaps, where the muon rate is higher, the \ac{CSCs} provide
+In the endcaps, where both the muon rate and the radiation levels are higher, the \ac{CSCs} provide
 measurements of the muon track. These detectors are radiation-hard,
 and have a fast response and fine segmentation.
 Each of the CSC modules is a wedge-shaped
@@ -449,7 +447,7 @@ To obtain precise muon momentum resolution, information from
 the tracker hits has to be combined with measurements in the
 muon stations. The momentum resolution of the muon system
 alone is 9\% for muons with \pT~up to 200 GeV, and varies with $\eta$ 
-between 15-40\% for muons with \pT~of 1 TeV \cite{cms-jinst}.
+between 15-40\% for muons with \pT~of 1 TeV \cite{cms-jinst}. ADD FORMULA
 
 
 %Because of the uncertainty in the eventual background rates and in the ability of the muon system to measure the correct beam-crossing time when the LHC reaches full luminosity, a com- plementary, dedicated trigger system consisting of resistive plate chambers (RPC) was added in both the barrel and endcap regions. The RPCs provide a fast, independent, and highly-segmented trigger with a sharp pT threshold over a large portion of the rapidity range (|η| < 1.6) of the muon system. The RPCs are double-gap chambers, operated in avalanche mode to ensure good operation at high rates. They produce a fast response, with good time resolution but coarser position reso- lution than the DTs or CSCs. They also help to resolve ambiguities in attempting to make tracks from multiple hits in a chamber.
@@ -468,14 +466,14 @@ front-end electronics
 and reduces the event rate from 40 MHz to around 100 kHz, and the
 \ac{HLT}, which runs on a computer farm with around 13000 CPU cores \cite{cms-trigger}.
 During \ac{LS1} and the year-end technical stop at the end of 2015 the \ac{L1} trigger was
-replaced by a completely upgraded system \cite{cms-trigger-tdr}, which provides amongst others 
-improved object isolation, hadronic tau identification, muon \pT~resolution and
+replaced by a completely upgraded system \cite{cms-trigger-tdr}, which provides amongst other 
+things improved object isolation, hadronic tau identification, muon \pT~resolution and
 jet finding with respect to the system used during Run 1.
 An overview of the data flow in the \ac{L1} trigger is given in figure \ref{fig:CMS_Trigger}.
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[width=0.5\textwidth]{./Detector/Plots/CMSTrigger.png}
+\includegraphics[width=0.7\textwidth]{./Detector/Plots/CMSTrigger.png}
 \caption{Schematic of the different components of the \ac{L1} trigger \cite{cms-trigger-tdr}.}
 \label{fig:CMS_Trigger}
 \end{center}
@@ -484,12 +482,14 @@ An overview of the data flow in the \ac{L1} trigger is given in figure \ref{fig:
 
 The \ac{L1} trigger only makes use of information from the calorimeters and the muon systems.
 The calorimeter trigger starts from \ac{HCAL} and \ac{ECAL} energy deposits, 
-which are fed to the first layer of the trigger. This layer maps onto
-columns of the detector, receiving data from many bunch crossings. These data are passed
+which are fed to the first layer of the trigger, where it makes use of a time-multiplexed system. 
+The first trigger layer maps onto columns of the detector, receiving data from many bunch crossings. These data are passed
 on to the second layer of the trigger in a way that bundles data from a single bunch crossing, but
 different columns of the detector, to be processed on one node in the second layer of the
 trigger. In this step basic object identification is performed based on the energy
 deposits, so that a sorted list of the best candidates can be passed to the global trigger.
+The trigger employed during Run 1, and the first year of Run 2, did not use time-multiplexing. Instead, 
+information from different regions of the detector were processed independently.
 Hits in the muon chambers are read out and passed to the track finder layer 
 of the muon trigger, which combines information from the CSC, \ac{DT}
 and RPC systems in regions of $\eta-\phi$.
@@ -509,7 +509,7 @@ can be more accurately identified and their momentum is more
 precisely known. The algorithms used in the \ac{HLT} are usually simpler
 versions of those used in the full offline reconstruction. %Can't use full because time limited
 During the 2012 run of the \ac{LHC} the \ac{HLT} operated with an output
-capacity of around 1 kHz, for Run 2 this has increased. In August 2016, 
+capacity of around 1 kHz, for Run 2 this has been increased. In August 2016, 
 the \ac{HLT} output rate was 1.2 kHz for immediate data processing, with
 an additional 0.6 kHz parked to be reconstructed and analysed when 
 more processing power is available\cite{CMS-PAS-HIG-16-037}. %ie at the end of run 2
